# silvertune-web

./: CNAME  Cargo.toml  README.md  index.html  projector.html  worklet.js
.github/workflows/: deploy.yml  release-companion.yml  release-plugin.yml
companion/: CMakeLists.txt  Cargo.toml  tauri.conf.json
companion/src/: audio.rs  grain.h  main.cpp  main.rs  params.rs  scale.h  sha1.h  ws.cpp  ws.h  ws.rs  yin.cpp  yin.h
companion/src/dsp/: grain.rs  yin.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
silvertune-dsp/: Cargo.toml
silvertune-dsp/src/: lib.rs  scale.rs  yin.rs
xtask/: Cargo.toml
xtask/src/: main.rs
