[package]
name = "silvertune-companion"
version = "0.1.0"
edition = "2021"
description = "Native low-latency audio companion for Silvertune"
license = "MIT"

[[bin]]
name = "silvertune-companion"
path = "src/main.rs"

[dependencies]
tauri        = { version = "2.5",  features = ["tray-icon", "image-png"] }
tokio        = { version = "1.44", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
cpal         = "0.15"
crossbeam-channel = "0.5"
log          = "0.4"
env_logger   = "0.11"
open         = "5"

[build-dependencies]
tauri-build  = { version = "2.0", features = [] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = true
